--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
+  text-align: center;
 }
 
 .logo {
@@ -38,4 +39,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
